performed vader to global and drivers

--- a/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
+++ b/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
@@ -634,6 +634,78 @@
     "\n",
     "radio_data.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Analyzing sentiment distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analyze sentiment distribution\n",
+    "sentiment_counts = radio_data['sentiment'].value_counts()\n",
+    "print(\"Sentiment distribution:\")\n",
+    "print(sentiment_counts)\n",
+    "print(f\"Percentage of positive messages: {sentiment_counts.get('positive', 0) / len(radio_data) * 100:.2f}%\")\n",
+    "print(f\"Percentage of neutral messages: {sentiment_counts.get('neutral', 0) / len(radio_data) * 100:.2f}%\")\n",
+    "print(f\"Percentage of negative messages: {sentiment_counts.get('negative', 0) / len(radio_data) * 100:.2f}%\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize sentiment distribution\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(x='sentiment', data=radio_data, palette={'positive': 'green', 'neutral': 'gray', 'negative': 'red'})\n",
+    "plt.title('Sentiment Distribution of F1 Team Radio Messages', fontsize=15)\n",
+    "plt.xlabel('Sentiment', fontsize=12)\n",
+    "plt.ylabel('Count', fontsize=12)\n",
+    "plt.xticks(rotation=0)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Analyzing sentiment distribution by driver\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Examine sentiment distribution by driver\n",
+    "driver_sentiment = pd.crosstab(radio_data['driver'], radio_data['sentiment'], normalize='index') * 100\n",
+    "driver_sentiment = driver_sentiment.sort_values(by='positive', ascending=False)\n",
+    "\n",
+    "# Plot driver sentiment distribution\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "driver_sentiment.plot(kind='bar', stacked=True, \n",
+    "                     colormap='viridis', figsize=(12, 8))\n",
+    "plt.title('Sentiment Distribution by Driver (%)', fontsize=15)\n",
+    "plt.xlabel('Driver', fontsize=12)\n",
+    "plt.ylabel('Percentage', fontsize=12)\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.legend(title='Sentiment')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
