added explanation of next steps, now, i will explain the code

--- a/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
+++ b/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e70c4fb4-fe1d-4ea0-9f4b-40a97303b3c5",
+       "ref": "bcac3aeb-a7a9-4bd6-ad64-c93988d5b41d",
        "rows": [
         [
          "0",
@@ -266,7 +266,7 @@
        "4  Just another two or three minutes to get throu...     5.712  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,13 +320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b122118d2c114f9a830b8452f73f112f",
+       "model_id": "8f81b6c1cd054ed596bd53822848c640",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +398,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a00347da-16a5-4428-88f9-fc35c646730a",
+       "ref": "cd8569bf-385e-43f3-bba6-3c64836e805c",
        "rows": [
         [
          "0",
@@ -602,7 +602,7 @@
        "4  0.000    0.0000   neutral  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "2dd0b4aa-495a-490a-89fe-8a4f9483ea02",
+       "ref": "aaa558d5-f373-4a0c-834d-4db529237ae3",
        "rows": [
         [
          "35",
@@ -996,7 +996,7 @@
        "154      44  Yes mate, yes, just one more lap, I would have...    0.9725"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d1f0fd53-139c-41e2-bf55-4f1402e40765",
+       "ref": "7e24d03b-afea-4a69-9e02-faf72bbec6aa",
        "rows": [
         [
          "13",
@@ -1216,7 +1216,7 @@
        "21      11                Generally the traction is going up.    0.0000"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d49cfeee-2cf2-4514-8bfb-f1ae70263f0d",
+       "ref": "8d290a3f-d797-4b26-9104-468cfccdbd46",
        "rows": [
         [
          "54",
@@ -1436,7 +1436,7 @@
        "92       24  Anything I can do with this break, I'm so disa...   -0.5332"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1472,6 +1472,197 @@
     "output_path = \"../../outputs/week4/radios_sentiment_vader.csv\"\n",
     "radio_data.to_csv(output_path, index = False)\n",
     "print(f\"Sentiment analysis results saved to {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Making metrics for future comparison with other models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary metrics:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "model",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "positive_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "neutral_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "negative_percentage",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "average_compound",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "std_compound",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "9f06c3cd-9c64-4e7c-b939-dda4e6df34f7",
+       "rows": [
+        [
+         "0",
+         "VADER",
+         "46.19047619047619",
+         "38.57142857142858",
+         "15.238095238095239",
+         "0.20106095238095237",
+         "0.41358996047509083"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 1
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>positive_percentage</th>\n",
+       "      <th>neutral_percentage</th>\n",
+       "      <th>negative_percentage</th>\n",
+       "      <th>average_compound</th>\n",
+       "      <th>std_compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>VADER</td>\n",
+       "      <td>46.190476</td>\n",
+       "      <td>38.571429</td>\n",
+       "      <td>15.238095</td>\n",
+       "      <td>0.201061</td>\n",
+       "      <td>0.41359</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model  positive_percentage  neutral_percentage  negative_percentage  \\\n",
+       "0  VADER            46.190476           38.571429            15.238095   \n",
+       "\n",
+       "   average_compound  std_compound  \n",
+       "0          0.201061       0.41359  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate metrics for future comparison with other models\n",
+    "metrics = {\n",
+    "    'model': 'VADER',\n",
+    "    'positive_percentage': sentiment_counts.get('positive', 0) / len(radio_data) * 100,\n",
+    "    'neutral_percentage': sentiment_counts.get('neutral', 0) / len(radio_data) * 100,\n",
+    "    'negative_percentage': sentiment_counts.get('negative', 0) / len(radio_data) * 100,\n",
+    "    'average_compound': radio_data['compound'].mean(),\n",
+    "    'std_compound': radio_data['compound'].std()\n",
+    "}\n",
+    "\n",
+    "metrics_df = pd.DataFrame([metrics])\n",
+    "metrics_df.to_csv('../../outputs/week4/sentiment_metrics_vader.csv', index=False)\n",
+    "print(\"Summary metrics:\")\n",
+    "metrics_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Next Steps: BERT-based Sentiment Analysis\n",
+    "\n",
+    "While NLTK's VADER provides a quick, lexicon-based sentiment analysis, deep learning models \n",
+    "like BERT can potentially offer better performance, especially for domain-specific language \n",
+    "like F1 team radio communications.\n",
+    "\n",
+    "Moreover, with this sentiment analysis, we can´t extract metrics for mistakes, like false positives. For this, we´ll need to label the data.\n",
+    "\n",
+    "### But first: labeling the data\n",
+    "\n",
+    "I think it is a good idea to label myself the data. With the correct labeling, I can try to make a comparison between the results given by VADER and then the others.\n",
+    "\n",
+    "Because of that, I´ll add the `N00_labeling_radios.ipynb`, where I will label the data.\n",
+    "\n",
+    "### Approaches for BERT-based sentiment analysis:\n",
+    "\n",
+    "1. **Using pretrained BERT models**:\n",
+    "   - Apply a pretrained BERT model fine-tuned for sentiment analysis (e.g., from Hugging Face)\n",
+    "   - This approach doesn't require labeled data from our domain\n",
+    "\n",
+    "2. **Fine-tuning BERT with our data**:\n",
+    "   - Requires manually labeling a subset of our radio messages\n",
+    "   - Could capture F1-specific sentiment expressions better\n",
+    "   - Steps:\n",
+    "     a. Sample a subset of messages (e.g., 100-200)\n",
+    "     b. Manually label them (positive, neutral, negative)\n",
+    "     c. Fine-tune a pretrained BERT model with these labeled examples\n",
+    "     d. Evaluate performance\n",
+    "\n",
+    "## Metrics for comparison:\n",
+    "- Distribution of sentiment categories\n",
+    "- Manual evaluation of a sample of predictions\n",
+    "- If we create a labeled test set, we can calculate precision, recall, and F1 scores\n"
    ]
   }
  ],
