added flags, finished sentiment analysis with vader, added n00 for labeling data

--- a/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
+++ b/scripts/NLP_radio_processing/N02_sentiment_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "bcac3aeb-a7a9-4bd6-ad64-c93988d5b41d",
+       "ref": "74c9fcdf-1337-4aaa-afd4-dfe2e8d155f1",
        "rows": [
         [
          "0",
@@ -266,7 +266,7 @@
        "4  Just another two or three minutes to get throu...     5.712  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,18 +315,25 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### Applying VADER\n"
+    "### Applying VADER\n",
+    "\n",
+    "Moreover, I will modify our current Dataframe to add the sentiment analysis made by vader to it. Therefore, there will be *5 new columns:*\n",
+    "\n",
+    "1. neg: number for specifying the ``negative`` component of the radio message.\n",
+    "2. pos: number for specifying the ``positive`` component of the radio message.\n",
+    "3. compound: the normalized, weighted composite score that represents overall sentiment of the text on a scale of -1 to 1.\n",
+    "4. sentiment: a final column whith the output of the sentiment. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f81b6c1cd054ed596bd53822848c640",
+       "model_id": "df0de0ad2796467684f06272464ec570",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,7 +343,43 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "# We apply vader to each transcription\n",
+    "\n",
+    "tqdm.pandas(desc = \"Analyzing sentiment\")\n",
+    "sentiment_scores = radio_data[\"text\"].progress_apply(get_sentiment_scores)\n",
+    "\n",
+    "# Convert sentiment scores to Dataframe Columns\n",
+    "\n",
+    "sentiment_df = pd.DataFrame(sentiment_scores.to_list())\n",
+    "radio_data = pd.concat([radio_data, sentiment_df], axis = 1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding a simple category based on compound score\n",
+    "\n",
+    "def categorize_sentiment(compound):\n",
+    "    if compound >= 0.05:\n",
+    "        return \"positive\"\n",
+    "    elif compound <= -0.05:\n",
+    "        return \"negative\"\n",
+    "    else:\n",
+    "        return \"neutral\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "application/vnd.microsoft.datawrangler.viewer.v0+json": {
@@ -398,7 +441,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "cd8569bf-385e-43f3-bba6-3c64836e805c",
+       "ref": "2281f185-66d5-4820-8705-5414a85e3606",
        "rows": [
         [
          "0",
@@ -602,32 +645,12 @@
        "4  0.000    0.0000   neutral  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# We apply vader to each transcription\n",
-    "\n",
-    "tqdm.pandas(desc = \"Analyzing sentiment\")\n",
-    "sentiment_scores = radio_data[\"text\"].progress_apply(get_sentiment_scores)\n",
-    "\n",
-    "# Convert sentiment scores to Dataframe Columns\n",
-    "\n",
-    "sentiment_df = pd.DataFrame(sentiment_scores.to_list())\n",
-    "radio_data = pd.concat([radio_data, sentiment_df], axis = 1)\n",
-    "\n",
-    "# Adding a simple category based on compound score\n",
-    "\n",
-    "def categorize_sentiment(compound):\n",
-    "    if compound >= 0.05:\n",
-    "        return \"positive\"\n",
-    "    elif compound <= -0.05:\n",
-    "        return \"negative\"\n",
-    "    else:\n",
-    "        return \"neutral\"\n",
-    "    \n",
     "radio_data[\"sentiment\"] = radio_data[\"compound\"].apply(categorize_sentiment)\n",
     "\n",
     "# Display the updated dataframe\n",
@@ -645,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -676,8 +699,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Key observations\n",
+    "\n",
+    "1. High positive sentiment. Much more than expected:\n",
+    "\n",
+    "    46.19% of messages being positive are somewhat surprising for F1 team radio, whic is primarly technical and instructional in nature. However, this can be due to the end-of-race radios, where the drivers and engineers make a summary of the race.\n",
+    "\n",
+    "2. Relatively low neutral percentage:\n",
+    "\n",
+    "    Given that most team radio communications are tactical instructions or status updates, we would expect the neutral category to be dominant. The 38.57% neutral finding is likely an underestimation.\n",
+    "\n",
+    "3. Potential VADER Limitations in F1 Context:\n",
+    "\n",
+    "    Racing-specific terminology might be misclassified (e.g., \"push now\" being seen as positive encouragement rather than a neutral tactical instruction)\n",
+    "\n",
+    "    Technical acknowledgments like \"copy that, understood\" might register as slightly positive.\n",
+    "\n",
+    "These points prove that, when labeling the data, it will be needed to define a clear context of what is a positive or negative radio message, and maybe, eliminating the end-of-race messages, because they do not give information during the race."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -769,13 +815,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Key observations\n",
+    "\n",
+    "* *Extreme Variations Between Drivers*: The dramatic differences (from 100% positive for Driver 40 to mostly neutral for Driver 11) likely reflect VADER's limitations in interpreting F1-specific terminology rather than actual sentiment variations in communication styles.\n",
+    "\n",
+    "* *Systematic Pattern*: The clear gradient from left (predominantly positive) to right (increasingly neutral) suggests VADER may be biased in how it processes different communication patterns, emphasizing the need for domain-specific manual labeling.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "### Displaying examples of each sentiment category"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +882,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "aaa558d5-f373-4a0c-834d-4db529237ae3",
+       "ref": "dae34a9c-2869-4a6d-9542-eb88920ce4c5",
        "rows": [
         [
          "35",
@@ -996,7 +1053,7 @@
        "154      44  Yes mate, yes, just one more lap, I would have...    0.9725"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1102,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "7e24d03b-afea-4a69-9e02-faf72bbec6aa",
+       "ref": "d84b477d-a236-49c3-9c78-a67d75592055",
        "rows": [
         [
          "13",
@@ -1216,7 +1273,7 @@
        "21      11                Generally the traction is going up.    0.0000"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1322,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "8d290a3f-d797-4b26-9104-468cfccdbd46",
+       "ref": "e50dd7c2-84db-4f6e-91c0-e689263dd95d",
        "rows": [
         [
          "54",
@@ -1436,7 +1493,7 @@
        "92       24  Anything I can do with this break, I'm so disa...   -0.5332"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1593,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "9f06c3cd-9c64-4e7c-b939-dda4e6df34f7",
+       "ref": "8b47e0d9-cd11-43c1-994b-78c540672a5d",
        "rows": [
         [
          "0",
@@ -1602,7 +1659,7 @@
        "0          0.201061       0.41359  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,6 +1701,19 @@
     "\n",
     "Because of that, I´ll add the `N00_labeling_radios.ipynb`, where I will label the data.\n",
     "\n",
+    "But...\n",
+    "\n",
+    "#### **When labeling data, we will exclude end-of-race messages for the following reasons:**\n",
+    "Why?\n",
+    "\n",
+    "* Project Focus: Our model aims to support real-time strategic decision-making during races, not post-race analysis.\n",
+    "\n",
+    "* Different Context: End-of-race communications follow different patterns (congratulatory, reflective) than tactical in-race messages.\n",
+    "\n",
+    "* Sentiment Distortion: Including these highly emotional messages would create an unrealistic sentiment distribution compared to the strategic communications we need to analyze.\n",
+    "\n",
+    "#### Therefore, in the labelling radios notebook, I´ll make this cleaning before labeling. If the dataset gets highly reduced, I may need to rerun the code with new radio messages. \n",
+    "---\n",
     "### Approaches for BERT-based sentiment analysis:\n",
     "\n",
     "1. **Using pretrained BERT models**:\n",
@@ -1658,7 +1728,7 @@
     "     b. Manually label them (positive, neutral, negative)\n",
     "     c. Fine-tune a pretrained BERT model with these labeled examples\n",
     "     d. Evaluate performance\n",
-    "\n",
+    "---\n",
     "## Metrics for comparison:\n",
     "- Distribution of sentiment categories\n",
     "- Manual evaluation of a sample of predictions\n",
