--- a/scripts/data_extraction/extract_radios.ipynb
+++ b/scripts/data_extraction/extract_radios.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Script for Extracting Radios of 2023 Spanish GP\n",
+    "# Script for Extracting Radios \n",
     "\n",
-    "This script is for extracting the team radios of the 2023 Spanish Grand Prix\n",
+    "This script is for extracting the team radios of the 2023 season.\n",
+    "\n",
+    "Races extracted:\n",
+    "* Belgium.\n",
+    "* Singapore.\n",
+    "* Spain.\n",
+    "\n",
+    "### Flag for knowing if I needed to add more data due to eliminating post-race radios\n",
     "\n",
     "---"
    ]
